Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Idefefe8fee570d59a76c4a05eccb8edb49cac4cb

--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -114,7 +114,7 @@
     <string name="connected_device_other_device_title" msgid="4652120430615729193">"অন্যান্য ডিভাইস"</string>
     <string name="connected_device_saved_title" msgid="5607274378851905959">"সেভ করে রাখা ডিভাইস"</string>
     <string name="connected_device_add_device_summary" msgid="8671009879957120802">"পেয়ার করার জন্য ব্লুটুথ চালু হবে"</string>
-    <string name="connected_device_connections_title" msgid="4164120115341579170">"কানেকশন অভিরুচি"</string>
+    <string name="connected_device_connections_title" msgid="4164120115341579170">"কানেকশন সংক্রান্ত পছন্দ"</string>
     <string name="connected_device_previously_connected_screen_title" msgid="8823331744788100605">"আগে কানেক্ট করা"</string>
     <string name="connected_device_bluetooth_turned_on_toast" msgid="144664089794199928">"ব্লুটুথ চালু হয়েছে"</string>
     <string name="previous_connected_see_all" msgid="7759413145713251328">"সবগুলি দেখুন"</string>
@@ -3550,7 +3550,7 @@
     <string name="domain_urls_summary_one" msgid="3312008753802762892">"<xliff:g id="DOMAIN">%s</xliff:g> খোলে"</string>
     <string name="domain_urls_summary_some" msgid="1197692164421314523">"<xliff:g id="DOMAIN">%s</xliff:g> এবং অন্য URLগুলি খোলে"</string>
     <string name="app_link_open_always" msgid="9167065494930657503">"সমর্থিত লিঙ্ক খোলার জন্য অ্যাপকে অনুমতি দিন"</string>
-    <string name="app_link_open_ask" msgid="2422450109908936371">"প্রতিবার জিজ্ঞাসা করুন"</string>
+    <string name="app_link_open_ask" msgid="2422450109908936371">"প্রতিবার জিজ্ঞাসা করা হবে"</string>
     <string name="app_link_open_never" msgid="5299808605386052350">"লিঙ্ক খোলার জন্য অ্যাপকে অনুমতি দেবেন না"</string>
     <string name="app_link_open_always_summary" msgid="4524005594295855117">"{count,plural, =1{অ্যাপ #টি লিঙ্ক ম্যানেজ করার দাবি করে}one{অ্যাপ #টি লিঙ্ক ম্যানেজ করার দাবি করে}other{অ্যাপ #টি লিঙ্ক ম্যানেজ করার দাবি করে}}"</string>
     <string name="open_supported_links_footer" msgid="3188808142432787933">"অ্যাপ নিম্নলিখিত লিঙ্ক খুলতে চায়:"</string>
@@ -4569,7 +4569,7 @@
     <string name="show_clip_access_notification_summary" msgid="474090757777203207">"আপনি কপি করেছেন এমন টেক্সট, ছবি বা অন্যান্য কন্টেন্ট, অ্যাপ অ্যাক্সেস করলে মেসেজ দেখুন"</string>
     <string name="all_apps" msgid="3054120149509114789">"সব অ্যাপ"</string>
     <string name="request_manage_bluetooth_permission_dont_allow" msgid="8798061333407581300">"অনুমতি দেবেন না"</string>
-    <string name="uwb_settings_title" msgid="8578498712312002231">"আলট্রা-ওয়াইডব্য়ান্ড (ইউডব্লুউবি)"</string>
+    <string name="uwb_settings_title" msgid="8578498712312002231">"আলট্রা-ওয়াইডব্যান্ড (UWB)"</string>
     <string name="uwb_settings_summary" msgid="3074271396764672268">"কাছাকাছি UWB ডিভাইসের আপেক্ষিক অবস্থান শনাক্ত করতে সহায়তা করে"</string>
     <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"ইউডব্লুউবি ব্যবহার করতে \'বিমান মোড\' বন্ধ করুন"</string>
     <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"বর্তমান লোকেশনে UWB উপলভ্য নেই"</string>
