--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -2014,7 +2014,7 @@
     <string name="accessibility_hearing_device_connected_title" msgid="3785140037249487287">"Слуховые аппараты"</string>
     <string name="accessibility_hearing_device_saved_title" msgid="7573926212664909296">"Сохраненные аппараты"</string>
     <string name="accessibility_hearing_device_control" msgid="2661965917013100611">"Управление слуховым аппаратом"</string>
-    <string name="accessibility_hearing_device_shortcut_title" msgid="7645100199603031360">"Ярлык для слухового аппарата"</string>
+    <string name="accessibility_hearing_device_shortcut_title" msgid="7645100199603031360">"Быстрый запуск слухового аппарата"</string>
     <string name="accessibility_hac_mode_title" msgid="2037950424429555652">"Поддержка слуховых аппаратов"</string>
     <string name="accessibility_hac_mode_summary" msgid="5198760061256669067">"Улучшить совместимость со слуховыми аппаратами и уменьшить нежелательный шум"</string>
     <string name="accessibility_hearing_device_about_title" msgid="7883758309646288250">"О слуховых аппаратах"</string>
@@ -3576,7 +3576,7 @@
     <string name="high_power_on" msgid="8778058701270819268">"Не экономит заряд"</string>
     <string name="high_power_off" msgid="317000444619279018">"Экономия заряда включена"</string>
     <string name="high_power_system" msgid="3966701453644915787">"Экономия заряда недоступна"</string>
-    <string name="high_power_prompt_title" msgid="2574478825228409124">"Разрешить приложению запуск в фоновом режиме?"</string>
+    <string name="high_power_prompt_title" msgid="2574478825228409124">"Разрешить приложению всегда работать в фоновом режиме?"</string>
     <string name="high_power_prompt_body" msgid="6029266540782139941">"Если приложению \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" будет разрешено всегда работать в фоновом режиме, батарея может разряжаться быстрее. \n\nОтозвать разрешение можно в любое время. Для этого выберите \"Настройки &gt; Приложения\"."</string>
     <string name="battery_summary" msgid="2491764359695671207">"Использовано с момента последней полной зарядки: <xliff:g id="PERCENTAGE">%1$s</xliff:g>"</string>
     <string name="battery_summary_24hr" msgid="7656033283282656551">"Использовано за последние 24 часа: <xliff:g id="PERCENTAGE">%1$s</xliff:g>"</string>
@@ -4542,7 +4542,7 @@
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"Закрепление приложений"</string>
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Режим разработчика"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Использовать службу печати"</string>
-    <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Разрешить добавлять несколько пользователей"</string>
+    <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Несколько пользователей"</string>
     <string name="multiple_users_main_switch_keywords" msgid="4845954458094134356">"разрешить, несколько, пользователь, разрешение, много"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Использовать отладку по Wi-Fi"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Изменение настроек графического драйвера"</string>
@@ -4574,7 +4574,7 @@
     <string name="all_apps" msgid="3054120149509114789">"Все приложения"</string>
     <string name="request_manage_bluetooth_permission_dont_allow" msgid="8798061333407581300">"Запретить"</string>
     <string name="uwb_settings_title" msgid="8578498712312002231">"Сверхширокополосная связь (СШП)"</string>
-    <string name="uwb_settings_summary" msgid="3074271396764672268">"Помогает определить относительное местоположение устройств с технологией сверхширокополосной связи поблизости"</string>
+    <string name="uwb_settings_summary" msgid="3074271396764672268">"Помогает определять относительное местоположение устройств поблизости, у которых есть сверхширокополосная связь"</string>
     <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"Выключает режим полета, чтобы использовать сверхширокополосную связь"</string>
     <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"Сверхширокополосная связь недоступна в вашем регионе"</string>
     <string name="camera_toggle_title" msgid="8952668677727244992">"Доступ к камере"</string>
