--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -3659,7 +3659,7 @@
     <string name="work_profile_usage_access_warning" msgid="3477719910927319122">"Sovelluksen käyttötietojen poistaminen käytöstä ei estä järjestelmänvalvojaa seuraamasta työprofiilisi sovellusten datankäyttöä."</string>
     <string name="draw_overlay" msgid="7902083260500573027">"Näkyminen muiden päällä"</string>
     <string name="system_alert_window_settings" msgid="6458633954424862521">"Näkyminen muiden päällä"</string>
-    <string name="permit_draw_overlay" msgid="4468994037192804075">"Salli näyttäminen muiden sovellusten päällä"</string>
+    <string name="permit_draw_overlay" msgid="4468994037192804075">"Salli näkyminen muiden sovellusten päällä"</string>
     <string name="allow_overlay_description" msgid="1607235723669496298">"Anna sovelluksen näkyä muiden avoimien sovellusten päällä. Tämä sovellus voi nähdä, mitä kohtaa napautat, ja muuttaa, mitä näytöllä näytetään."</string>
     <string name="manage_external_storage_title" msgid="8024521099838816100">"Pääsy kaikkiin tiedostoihin"</string>
     <string name="permit_manage_external_storage" msgid="6928847280689401761">"Salli pääsy tiedostojen ylläpitoa varten"</string>
